--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-use-before-define": "off"
+    "no-use-before-define": "off",
+    "@typescript-eslint/camelcase":  ["error", { "properties": "never" }]
   }
 }
