added integration test step to pipeline

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -25,6 +25,12 @@ pipelines:
           - npm install
           - npm test
     - step:
+        name: Integration Test
+        caches:
+          - node
+        script:
+          - npm run integration-test
+    - step:
         <<: *deploy
     - step:
         <<: *deploy
