--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,13 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": [
-    "mocha"
+    "mocha",
+    "security"
   ],
   "extends":  [
     "plugin:@typescript-eslint/recommended",
     "plugin:mocha/recommended",
+    "plugin:security/recommended",
     "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
