added npm audit to build and test

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,6 +23,7 @@ pipelines:
           - node
         script:
           - npm install
+          - npm audit fix
           - npm test
     - step:
         <<: *deploy
