--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@types/chai-string": "^1.4.2",
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^13.1.5",
-    "@types/ramda": "^0.26.39",
+    "@types/node": "^13.1.8",
+    "@types/ramda": "^0.26.40",
     "@types/sinon": "^7.5.1",
     "@types/sinon-chai": "^3.2.3",
-    "@typescript-eslint/eslint-plugin": "^2.15.0",
-    "@typescript-eslint/parser": "^2.15.0",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
     "chai": "^4.2.0",
     "chai-string": "^1.5.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -35,17 +35,18 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-security": "^1.4.0",
     "fast-check": "^1.21.0",
-    "husky": "^4.0.3",
+    "fork-ts-checker-webpack-plugin": "^4.0.2",
+    "husky": "^4.2.0",
     "json-loader": "^0.5.7",
-    "lint-staged": "^9.5.0",
+    "lint-staged": "^10.0.2",
     "mocha": "^7.0.0",
     "prettier": "^1.19.1",
     "serverless-google-cloudfunctions": "^2.3.3",
     "serverless-webpack": "^5.3.1",
-    "sinon": "^8.0.4",
+    "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.4",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-node-externals": "^1.7.2"
   },
