--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Server Template GCP Nodejs",
   "scripts": {
     "test": "npm run unit-test && npm run integration-test",
-    "integration-test": "mocha -r ts-node/register tests/Integration/**/*.spec.ts --timeout=10000",
-    "unit-test": "mocha -r ts-node/register tests/Unit/**/*.spec.ts"
+    "integration-test": "mocha -r ts-node/register \"tests/Integration/**/*.spec.ts\"",
+    "unit-test": "mocha -r ts-node/register \"tests/Unit/**/*.spec.ts\""
   },
   "author": "carneyc",
   "dependencies": {
