--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-mocha": "^6.2.2",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-security": "^1.4.0",
     "fast-check": "^1.21.0",
-    "fork-ts-checker-webpack-plugin": "^4.0.2",
     "husky": "^4.2.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^10.0.2",
