--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types",
-      "src/typings"
+      "typings"
     ]
   },
   "include": [
