added npm run format

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "npm run unit-test && npm run integration-test",
     "integration-test": "mocha -r ts-node/register \"tests/Integration/**/*.spec.ts\"",
-    "unit-test": "mocha -r ts-node/register \"tests/Unit/**/*.spec.ts\""
+    "unit-test": "mocha -r ts-node/register \"tests/Unit/**/*.spec.ts\"",
+    "format": "eslint --fix src/**/* tests/**/*"
   },
   "author": "carneyc",
   "dependencies": {
