--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "serverless-template-gcp-nodejs",
   "version": "0.1.0",
   "description": "Server Template GCP Nodejs",
+  "main": "src/index.js",
   "scripts": {
     "test": "npm run unit-test && npm run integration-test",
     "integration-test": "mocha -r ts-node/register \"tests/Integration/**/*.spec.ts\"",
@@ -43,13 +44,11 @@
     "mocha": "^7.0.0",
     "prettier": "^1.19.1",
     "serverless-google-cloudfunctions": "^2.3.3",
-    "serverless-webpack": "^5.3.1",
+    "serverless-plugin-typescript": "^1.1.9",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-node-externals": "^1.7.2"
+    "typescript": "^3.7.5"
   },
   "husky": {
     "hooks": {
