--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@typescript-eslint/parser": "^2.17.0",
     "chai": "^4.2.0",
     "chai-string": "^1.5.0",
-    "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
@@ -48,6 +47,7 @@
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
     "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
   "husky": {
