--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "author": "carneyc",
   "dependencies": {
-    "fp-ts": "^2.6.1",
+    "fp-ts": "^2.6.2",
     "ramda": "^0.27.0",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19"
@@ -22,29 +22,29 @@
     "@types/chai-string": "^1.4.2",
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.5",
+    "@types/node": "^14.0.10",
     "@types/ramda": "^0.27.6",
     "@types/sinon": "^9.0.4",
     "@types/sinon-chai": "^3.2.4",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "chai": "^4.2.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-mocha": "^7.0.0",
+    "eslint-plugin-mocha": "^7.0.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-security": "^1.4.0",
     "fast-check": "^1.24.2",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.4",
-    "mocha": "^7.1.2",
+    "lint-staged": "^10.2.8",
+    "mocha": "^7.2.0",
     "prettier": "^2.0.5",
-    "serverless-google-cloudfunctions": "^2.3.3",
+    "serverless-google-cloudfunctions": "2.3.3",
     "serverless-plugin-typescript": "^1.1.9",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
-    "ts-node": "^8.10.1",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   },
   "husky": {
